--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
-						<a class="navbar-brand logo_h" href="index.html"><img src="img/tntpf-logo.png" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
+						<a class="navbar-brand logo_h" href="/"><img src="img/tntpf-logo1.png" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -65,7 +65,7 @@
             	<div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
       				<div class="container">
       					<div class="banner_content text-center">
-                  <img src="img/tntpf-logo.png" alt="Tamilnadu Telugu People Foundation">
+                  <img src="img/tntpf-logo1.png" alt="Tamilnadu Telugu People Foundation">
       						<h5><i>We need your Help to serve the people</i></h5>
       						<h3>Tamilnadu Telugu People Foundation</h3>
       						<a class="main_btn" href="#donate">Donate</a>
