--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>Lakshya Foundation</title>
+        <title>Tamilnadu Telugu People Foundation</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -35,7 +35,7 @@
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container">
-						<a class="navbar-brand logo_h" href="/"><img src="img/tnppf-logo.jpeg" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
+						<a class="navbar-brand logo_h" href="/"><img src="img/tntpf-logo.jpeg" width="80px" alt="Tamilnadu Telugu People Foundation"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -65,7 +65,7 @@
             	<div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
       				<div class="container">
       					<div class="banner_content text-center">
-                  <img src="img/tnppf-logo.jpeg" alt="Tamilnadu Telugu People Foundation" width="20%">
+                  <img src="img/tntpf-logo.jpeg" alt="Tamilnadu Telugu People Foundation" width="20%">
       						<h5><i>We need your Help to serve the people</i></h5>
       						<h3>Tamilnadu Telugu People Foundation</h3>
       						<a class="main_btn" href="#donate">Donate</a>
