--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <div class="col-lg-6">
                 <div class="feature_item-1">
                   <img class="mx-auto rounded-circle" src="img/event/tn-raju.jpg" alt=""><br><br>
-                  <h4>MR. K. NOOKARAJU</h4>
+                  <h4>Devarakonda Raju MA</h4>
                   <p class="text-muted">MANAGING TRUSTEE</p>
                 </div>
               </div>
@@ -607,15 +607,18 @@
                   </div>
                 </div>
               </div>
-
-
             </div>
 
+            <br>
+            <br>
+            <br>
 
+            <center>
+              <div class="fb-page" data-href="https://www.facebook.com/tntpf.india.9" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf.india.9" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf.india.9">Tamilnadu Telugu People Foundation</a></blockquote></div>
+            </center>
+            <br>
+            <br>
 
-            <!-- <center>
-              <div class="fb-page" data-href="https://www.facebook.com/Lakshya-177869029443418" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Lakshya-177869029443418" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Lakshya-177869029443418">Tamilnadu Telugu People Foundation</a></blockquote></div>
-            </center> -->
 
 
         	</div>
@@ -686,7 +689,7 @@
                           <br>
                           Email: <a href="mailto:tntpf2020@gmail.com?Subject=Hello%20Raju" target="_top"><b>tntpf2020@gmail.com</b></a>
                       </div><br>
-                      <a href="https://www.facebook.com/Lakshya-177869029443418" target="_blank">
+                      <a href="https://www.facebook.com/tntpf.india.9" target="_blank">
                         <img src="img/banner/facebook.png" class="facebook wow rotateIn">
                       </a>
                   </div>
@@ -706,8 +709,6 @@
             </div>
         </footer>
 		<!--================ End footer Area  =================-->
-
-
 
 
         <!-- Optional JavaScript -->
