--- a/index.html
+++ b/index.html
@@ -228,8 +228,9 @@
               <h2> Teams</h2>
               <p>Meet Tamilnadu Telugu People Foundation Team</p>
             </div>
+
             <div class="row feature_inner">
-              <div class="col-lg-6">
+              <div class="col-lg-12">
                 <div class="feature_item-1">
                   <img class="mx-auto rounded-circle" src="img/event/tn-raju.jpg" alt=""><br><br>
                   <h4>Devarakonda Raju MA</h4>
@@ -237,13 +238,13 @@
                 </div>
               </div>
 
-              <div class="col-lg-6">
+              <!-- <div class="col-lg-6">
                 <div class="feature_item-1">
                   <img class="mx-auto rounded-circle" src="img/event/tharasingh.jpg" alt=""><br><br>
                   <h4>MR. G. PRAVEEN KUMAR</h4>
                   <p class="text-muted">TRUSREE</p>
                 </div>
-              </div>
+              </div> -->
 
 
 
@@ -266,9 +267,19 @@
 
                 <div class="col-md-4 col-sm-6 gallery_item">
                     <div class="gallery_img">
+                        <img src="img/gallery/tntpf1.jpg" alt="">
+                        <div class="hover">
+                          <a class="light" href="img/gallery/tntpf1.jpg"><i class="fa fa-expand"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-md-4 col-sm-6 gallery_item">
+                    <div class="gallery_img">
                         <img src="img/gallery/tntpf2.jpg" alt="">
                         <div class="hover">
-                          <a class="light" href="img/gallery/tntpf3.jpg"><i class="fa fa-expand"></i></a>
+                          <a class="light" href="img/gallery/tntpf2.jpg"><i class="fa fa-expand"></i></a>
                         </div>
                     </div>
                 </div>
@@ -569,6 +580,15 @@
                     <img src="img/gallery/tntpf35.jpg" alt="">
                     <div class="hover">
                       <a class="light" href="img/gallery/tntpf35.jpg"><i class="fa fa-expand"></i></a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 gallery_item">
+                  <div class="gallery_img">
+                    <img src="img/gallery/tntpf36.jpg" alt="">
+                    <div class="hover">
+                      <a class="light" href="img/gallery/tntpf36.jpg"><i class="fa fa-expand"></i></a>
                     </div>
                   </div>
                 </div>
