--- a/index.html
+++ b/index.html
@@ -19,13 +19,7 @@
         <link rel="stylesheet" href="css/responsive.css">
 
         <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0"></script>
 
     </head>
     <body>
@@ -634,7 +628,7 @@
             <br>
 
             <center>
-              <div class="fb-page" data-href="https://www.facebook.com/tntpf.india.9" data-tabs="timeline" data-width="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf.india.9" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf.india.9">Tamilnadu Telugu People Foundation</a></blockquote></div>
+              <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf1/">TNTPF</a></blockquote></div>
             </center>
             <br>
             <br>
@@ -709,7 +703,7 @@
                           <br>
                           Email: <a href="mailto:tntpf2020@gmail.com?Subject=Hello%20Raju" target="_top"><b>tntpf2020@gmail.com</b></a>
                       </div><br>
-                      <a href="https://www.facebook.com/tntpf.india.9" target="_blank">
+                      <a href="https://www.facebook.com/tntpf1/" target="_blank">
                         <img src="img/banner/facebook.png" class="facebook wow rotateIn">
                       </a>
                   </div>
