--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
         		</div>
 
             <div class="row gallery_inner imageGallery1">
-              <div class="col-md-6 col-sm-6 gallery_item">
+              <div class="col-md-4 col-sm-4 gallery_item">
                 <div class="gallery_img">
                   <img src="img/press-release/pr1.jpg" alt="">
                   <div class="hover">
@@ -613,7 +613,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 col-sm-6 gallery_item">
+              <div class="col-md-4 col-sm-4 gallery_item">
                 <div class="gallery_img">
                   <img src="img/press-release/pr2.jpg" alt="">
                   <div class="hover">
@@ -621,6 +621,17 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr3.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr3.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
+
+
             </div>
 
             <br>
@@ -628,7 +639,7 @@
             <br>
 
             <center>
-              <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf1/">TNTPF</a></blockquote></div>
+              <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="450" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf1/">Tamilnadu Telugu People Foundation</a></blockquote></div>
             </center>
             <br>
             <br>
