--- a/index.html
+++ b/index.html
@@ -634,15 +634,20 @@
 
             </div>
 
-            <br>
-            <br>
+            <br><br><br>
+
+            <div class="col-md-6 col-sm-6 pull-left">
+              <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="450" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf1/">Tamilnadu Telugu People Foundation</a></blockquote></div>
+            </div>
+
+            <div class="col-md-6 col-sm-6 pull-right">
+              <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ftntpf1%2Fvideos%2F1125165571167545%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            </div>
+            <div class="clearfix"></div>
             <br>
 
-            <center>
-              <div class="fb-page" data-href="https://www.facebook.com/tntpf1/" data-tabs="timeline" data-width="450" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/tntpf1/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/tntpf1/">Tamilnadu Telugu People Foundation</a></blockquote></div>
-            </center>
-            <br>
-            <br>
+
+
 
 
 
