--- a/index.html
+++ b/index.html
@@ -713,7 +713,8 @@
                           <h6>
                             <b>
                             Devarakonda Raju MA <br>
-                            Mobile : +91 99624 69996, +91 94442 26848
+                            Mobile : +91 99624 69996, +91 94442 26848 <br>
+                            Phone  : 044-42769996
                             </b>
                           </h6>
                           <br>
