--- a/index.html
+++ b/index.html
@@ -124,14 +124,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>Welcome to Tamilnadu Telugu People Foundation</h4>
-        					<p>Children are the most valuable asset of a nation irrespective of their
-                    caste, community, creed, color or background. Their future is the nation’s
-                    future. But a large number of children are not blessed enough to have the
-                    necessary resources and opportunities. These less fortunate children
-                    suffer persistently in advancing to achieve something in life contrary to the
-                    ones who possess all the facilities. They have to make their own way and
-                    sustain in today’s competitive world. Hence they must be taken care of by
-                    the society unconditionally.
+        					<p>Supporting your local community can bring a whole host of benefits to you and the people around you. Lending a helping hand can help you to make new friends, learn new skills, advance your career and, most importantly, give something back. They have to make their own way and sustain in today’s world. Hence they must be taken care of by the society unconditionally.
                   </p>
         				</div>
         			</div>
@@ -142,37 +135,6 @@
         			</div>
 
         		</div><br><br>
-            <div class="row welcome_inner">
-              <div class="col-lg-6">
-        				<div class="welcome_img">
-                  <img class="img-fluid" src="img/gallery/tntpf16.jpg" alt="Tamilnadu Telugu People Foundation">
-        				</div>
-        			</div>
-
-        			<div class="col-lg-6">
-        				<div class="welcome_text">
-        					<p>You have been extremely benevolent in extending your
-                    cooperation and support to me earlier for the help of children,
-                    belonging to the deprived section of the society and studying in ,
-                    was solely the outcome of the help and motivation extended by
-                    the rare souls like you.
-                    Now, we have launched an NGO “Lakshya” I personally invite you
-                    to become instrumental in bringing a positive and qualitative
-                    change in the life of the poor and needy children of the society as
-                    our great saint, educationist, and philosopher Swami Vivekanand
-                    has stated-“<b>Service to humanity is service to divinity”.</b>
-                    “Lakshya” Foundation’s mission is to reach every individual who
-                    is willing to do something good to the society and make them join
-                    the Foundation in order to intensify the work being done for the
-                    social cause.
-                    We’ll feel highly privileged in receiving your kind consent to join
-                    “Lakshya” Foundation primary member by reverse e-mail.
-                    Regards.
-                  </p>
-        				</div>
-        			</div>
-
-
         		</div>
         	</div>
         </section>
