--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       				<div class="container">
       					<div class="banner_content text-center">
                   <img src="img/tntpf-logo.jpeg" alt="Tamilnadu Telugu People Foundation" width="20%">
-      						<h5><i>We need your Help to serve the people</i></h5>
-      						<h3>Tamilnadu Telugu People Foundation</h3>
-      						<a class="main_btn" href="#donate">Donate</a>
+      						<h5><i>We are here to help Tamilnadu Telugu People</i></h5>
+      						<h3>Tamilnadu Telugu People <br>Foundation</h3>
+      						<!-- <a class="main_btn" href="#donate">Donate</a> -->
       					</div>
       				</div>
             </div>
