--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       								<div class="media">
       									<div class="media-body">
       										<h4>Total Events</h4>
-      										<p>Your donation gives us the enough motivation to work in more efficient way</p>
+      										<p>Your support gives us the enough motivation to work in more efficient way</p>
       									</div>
       									<div class="d-flex">
       										<h3>200 +</h3>
@@ -87,10 +87,10 @@
       								<div class="media">
       									<div class="media-body">
       										<h4>Total Volunteers</h4>
-      										<p>Your donation gives us the enough motivation to work in more efficient way.</p>
+      										<p>Our Volunteers help us keep moving and help needy TN TS people, you can join us.</p>
       									</div>
       									<div class="d-flex">
-      										<h3>20 +</h3>
+      										<h3>100 +</h3>
       									</div>
       								</div>
       							</div>
@@ -100,10 +100,10 @@
       								<div class="media">
       									<div class="media-body">
       										<h4>Future Plans</h4>
-      										<p>Our plans are directed to serve the needy childs by using your support.</p>
+      										<p>Our plans are directed to serve the needy by using your support.</p>
       									</div>
       									<div class="d-flex">
-      										<h3>20 +</h3>
+      										<h3>50 +</h3>
       									</div>
       								</div>
       							</div>
