--- a/index.html
+++ b/index.html
@@ -119,12 +119,18 @@
         	<div class="container">
             <div class="main_title">
         			<h2>About </h2>
+        					<h4><u>Welcome to Tamilnadu Telugu People Foundation</u></h4>
         		</div>
         		<div class="row welcome_inner">
         			<div class="col-lg-5 col-sm-6" >
         				<div class="welcome_text">
-        					<h4>Welcome to Tamilnadu Telugu People Foundation</h4>
-        					<p>Supporting your local community can bring a whole host of benefits to you and the people around you. Lending a helping hand can help you to make new friends, learn new skills, advance your career and, most importantly, give something back. They have to make their own way and sustain in today’s world. Hence they must be taken care of by the society unconditionally.
+                  <p>
+                    TNTPF సంస్ట స్థాపించ్జాడానికి గల కారణాలు
+                    ఏడున్నర కోట్ల మంది నివసిస్తున్న తమిళ నాడు లొ దాదాపు రెండు కోట్ల మంది మన తెలుగు వారి వున్నారు ఉభయ తెలుగు రాస్ఠ్రాల తరువాత స్థానంలో తెలుగు వారు ఎక్కువగా నివసించేడి తమిళ నాడులొనె మాతృభాష పై మన తెలుగువారికె చాలా అభిమానం కలదు
+                    <br><br>
+                    TNTPF సంస్థ యొక్క ముక్య ఉడెశము తమిళ నాడులొ నివసించే తెలుగు ప్రజలకు అవసరమైన మౌలిక సదుపాయాలు అనగా ఆరోగ్యం విద్య ఉద్యోగం మరియు ఇతర కనీస అవసరాలకు దోహదం చేయడమే 1956 నవంబర్ 1వ తేదిన ఆంద్రప్రదేశ్ రాష్ట్ర0 మద్రాసు నుండి విడిపోయినప్పటికీ కొంత కొంత మంది తెలుగువారు చెన్నైలో స్థిరపడడం జరిగినది అందువలన తెలుగు వారికి నిత్యం అందుబాటులో ఉండటానికి స్థాపించడం జరిగినది
+                  </p>
+        					<!-- <p>Supporting your local community can bring a whole host of benefits to you and the people around you. Lending a helping hand can help you to make new friends, learn new skills, advance your career and, most importantly, give something back. They have to make their own way and sustain in today’s world. Hence they must be taken care of by the society unconditionally. -->
                   </p>
         				</div>
         			</div>
