--- a/index.html
+++ b/index.html
@@ -557,17 +557,18 @@
                   <td>50200048102890</td>
                 </tr>
                 <tr>
+                  <td>Bank IFSC</td>
+                  <td>HDFC0001216​</td>
+                </tr>
+                <tr>
                   <td>Bank Name</td>
                   <td>HDFC Bank</td>
                 </tr>
                 <tr>
                   <td>Bank Address</td>
-                  <td> PADMA COMPLEX, 320ANNA SALAINANDANAM, CHENNAI, TAMIL NADU, INDIA</td>
+                  <td>HDFC BANK LTD NO-30, Cenotaph Road Teynampet, CHENNAI - 600018, Tamilnadu, India</td>
                 </tr>
-                <tr>
-                  <td>Bank IFSC</td>
-                  <td>HDFC0001216​</td>
-                </tr>
+
 
               </tbody>
             </table>
