--- a/index.html
+++ b/index.html
@@ -122,19 +122,16 @@
         					<h4><u>Welcome to Tamilnadu Telugu People Foundation</u></h4>
         		</div>
         		<div class="row welcome_inner">
-        			<div class="col-lg-5 col-sm-6" >
+        			<div class="col-lg-6 col-md-6 col-sm-6" >
         				<div class="welcome_text">
                   <p>
-                    TNTPF సంస్ట స్థాపించ్జాడానికి గల కారణాలు
-                    ఏడున్నర కోట్ల మంది నివసిస్తున్న తమిళ నాడు లొ దాదాపు రెండు కోట్ల మంది మన తెలుగు వారి వున్నారు ఉభయ తెలుగు రాస్ఠ్రాల తరువాత స్థానంలో తెలుగు వారు ఎక్కువగా నివసించేడి తమిళ నాడులొనె మాతృభాష పై మన తెలుగువారికె చాలా అభిమానం కలదు
-                    <br><br>
-                    TNTPF సంస్థ యొక్క ముక్య ఉడెశము తమిళ నాడులొ నివసించే తెలుగు ప్రజలకు అవసరమైన మౌలిక సదుపాయాలు అనగా ఆరోగ్యం విద్య ఉద్యోగం మరియు ఇతర కనీస అవసరాలకు దోహదం చేయడమే 1956 నవంబర్ 1వ తేదిన ఆంద్రప్రదేశ్ రాష్ట్ర0 మద్రాసు నుండి విడిపోయినప్పటికీ కొంత కొంత మంది తెలుగువారు చెన్నైలో స్థిరపడడం జరిగినది అందువలన తెలుగు వారికి నిత్యం అందుబాటులో ఉండటానికి స్థాపించడం జరిగినది
+                    <img src="img/about-tntpf.png" width="110%">
                   </p>
         					<!-- <p>Supporting your local community can bring a whole host of benefits to you and the people around you. Lending a helping hand can help you to make new friends, learn new skills, advance your career and, most importantly, give something back. They have to make their own way and sustain in today’s world. Hence they must be taken care of by the society unconditionally. -->
                   </p>
         				</div>
         			</div>
-        			<div class="col-lg-7 col-sm-6">
+        			<div class="col-lg-6 col-md-6 col-sm-6">
         				<div class="welcome_img">
         					<img class="img-fluid" src="img/about.png" alt="Tamilnadu Telugu People Foundation">
         				</div>
@@ -161,13 +158,13 @@
                   <i class="lnr lnr-diamond"></i>
                   <h4>Vision</h4>
                   <p>Tamilnadu Telugu People Foundation intends to address the needs of these
-                      underprivileged people who are suffring from COVID19..and homeless, have nothing in hand</p>
+                      underprivileged people who are suffering from COVID19..and homeless, have nothing in hand</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature_item">
                   <i class="lnr lnr-diamond"></i>
-                  <h4>Misson</h4>
+                  <h4>Mission</h4>
                   <p>Tamilnadu Telugu People Foundation further intends to bring a lasting change in their lives by way of providing support, counseling, encouragement and a healthy environment..</p>
                 </div>
               </div>
@@ -509,7 +506,14 @@
                 </div>
               </div>
 
-
+              <div class="col-md-4 col-sm-4 gallery_item">
+                <div class="gallery_img">
+                  <img src="img/press-release/pr7.jpg" alt="">
+                  <div class="hover">
+                    <a class="light" href="img/press-release/pr7.jpg"><i class="fa fa-expand"></i></a>
+                  </div>
+                </div>
+              </div>
 
             </div>
 
