--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       								<div class="media">
       									<div class="media-body">
       										<h4>Total Events</h4>
-      										<p>Your support gives us the enough motivation to work in more efficient way</p>
+      										<p>Your support gives us enough motivation to work in more efficient way</p>
       									</div>
       									<div class="d-flex">
       										<h3>200 +</h3>
@@ -158,21 +158,21 @@
                   <i class="lnr lnr-diamond"></i>
                   <h4>Vision</h4>
                   <p>Tamilnadu Telugu People Foundation intends to address the needs of these
-                      underprivileged people who are suffering from COVID19..and homeless, have nothing in hand</p>
+                      underprivileged people who are suffering from COVID19 and have nothing in hand.</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature_item">
                   <i class="lnr lnr-diamond"></i>
                   <h4>Mission</h4>
-                  <p>Tamilnadu Telugu People Foundation further intends to bring a lasting change in their lives by way of providing support, counseling, encouragement and a healthy environment..</p>
+                  <p>Tamilnadu Telugu People Foundation further intends to bring a lasting change in their lives by way of providing support, counseling, encouragement and a healthy environment.</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature_item">
                   <i class="lnr lnr-diamond"></i>
                   <h4>Support</h4>
-                  <p> Tamilnadu Telugu People Foundation by its small effort would help them attain the right to survival, development and participation in the mainstream of the society. active cooperation and a helping hand. </p>
+                  <p> Tamilnadu Telugu People Foundation by its small effort would help them attain the right to survival, development and participation in the mainstream of the society. </p>
                 </div>
               </div>
             </div>
