--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#donate">Donate</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://rzp.io/l/n3mHJ6U" target="_blank">Donate</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="#news">News</a></li>
@@ -121,24 +121,50 @@
         			<h2>About </h2>
         					<h4><u>Welcome to Tamilnadu Telugu People Foundation</u></h4>
         		</div>
+
         		<div class="row welcome_inner">
-        			<div class="col-lg-6 col-md-6 col-sm-6" >
+        			<div class="col-lg-6 col-md-6 col-sm-6">
         				<div class="welcome_text">
-                  <p>
-                    <img src="img/about-tntpf.png" width="110%">
+        					<p>Tamil Nadu Telugu People’s Foundation (TNTPF) is a voluntary service organization formed in Tamil Nadu to work for the welfare of Telugu people living in Tamil Nadu. As part of the State Reorganization Act, 1956, news States are formed on linguistic basis. Thus Andhra Pradesh is formed by dividing some districts part from Madras State and including Hyderabad and Telangana districts. Telugu people who are settled in different parts of Tamil Nadu are not inclined to shift from Tamil Nadu to Andhra Pradesh then. According to an estimation, about 2 crore Telugu people are still living in Tamil Nadu out of a total of 7.5 crore population of the State. Various Telugu cultural organizations used to organize programmes to safeguard the interests of Telugu pride. Interestingly, Tamil Nadu is the highest Telugu-speaking population after two Telugu States.
+                  <br>
+                  <br>
+                  TNTPF‘s prime objective is to save our mother tongue. Many Telugu people living in Tamil Nadu are discriminated in sectors like education and getting basic amenities. TNTPF volunteers will identify the poor people who are living below the poverty line and ensure them a comfortable living.
+
                   </p>
-        					<!-- <p>Supporting your local community can bring a whole host of benefits to you and the people around you. Lending a helping hand can help you to make new friends, learn new skills, advance your career and, most importantly, give something back. They have to make their own way and sustain in today’s world. Hence they must be taken care of by the society unconditionally. -->
-                  </p>
-        				</div>
-        			</div>
+          			</div>
+              </div>
+
         			<div class="col-lg-6 col-md-6 col-sm-6">
         				<div class="welcome_img">
         					<img class="img-fluid" src="img/about.png" alt="Tamilnadu Telugu People Foundation">
         				</div>
         			</div>
-
-        		</div><br><br>
         		</div>
+
+            <div class="row welcome_inner">
+              <div class="col-lg-6 col-md-6 col-sm-6" >
+                <div class="welcome_text">
+                  <br>
+                  <p>தமிழ்நாடு தெலுங்கு பீப்பிள் பவுண்டேஷன்(TNTPF) என்கிற அமைப்பு துவங்குவதற்கு காரணம் என்னவென்றால், தமிழகம் எட்டரை கோடி  மக்கள் தொகைக்
+                  கொண்டதாகும். இதில் 2 கோடி மக்கள் தெலுங்கை தாய்மொழியாகக் கொண்டவர்கள் ஆவார்கள்.
+                  தெலுங்கானா மற்றும் ஆந்திர பிரதேசத்திற்கு அடுத்து தமிழகத்தில் மட்டுமே தெலுங்கு மக்கள் அதிகமாக வசித்து வருகின்றனர். அதனால் தெலுகு மீது அதிகம் பற்றுள்ள நபர்களுக்காக இந்த அமைப்பு ஆரம்பிக்கப்பட்டுள்ளது.
+                  <br>
+                  <br>
+                  இந்த அமைப்பினுடையக் கொள்கை என்னவென்றால் தமிழகத்தில் வாழ்ந்துவரும் தெலுங்கு மக்களின் நலனுக்காக, படிப்பு, வேலைவாய்ப்பு, ஹெல்த் மற்றும் அவர்களுடைய தேவை அறிந்து அதனை அனைத்தும் நிறைவேற்றுவதற்காக இந்த அமைப்பு தெலுங்கு மக்களுக்கு சேவை செய்வதையே கொள்கையாக வைத்து செயல்பட உள்ளது.
+                  <br>
+                  <br>
+
+                  1956இல் மாநில அரசிடம் தமிழ்நாட்டில் இருந்து  பிரிந்தது பிரிந்தாலும் தெலுங்கைத் தாய்மொழியாகக் கொண்ட தெலுங்கு மக்கள் அதிகமாக தமிழ்நாட்டில் வசித்து வருகிறார்கள், அவர்களுடைய நலனுக்காக இந்த அமைப்பு ஆரம்பிக்கப்பட்டுள்ளது என்பதை தெரிவித்துக் கொள்கிறோம்...</p>
+                </div>
+              </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <div class="welcome_img">
+                <img src="img/about-tntpf.png" width="100%">
+              </div>
+            </div>
+
+            </div>
         	</div>
         </section>
         <!--================End Welcome Area =================-->
@@ -157,22 +183,22 @@
                 <div class="feature_item">
                   <i class="lnr lnr-diamond"></i>
                   <h4>Vision</h4>
-                  <p>Tamilnadu Telugu People Foundation intends to address the needs of these
-                      underprivileged people who are suffering from COVID19 and have nothing in hand.</p>
+                  <p>TNTPF has a long vision to unite Telugu people across Tamil Nadu. As part of its endeavour, it has developed a volunteers’ network to take up welfare activities and organize cultural and literary events. The Foundation strives for developing platforms in social, cultural and political spheres.</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature_item">
                   <i class="lnr lnr-diamond"></i>
                   <h4>Mission</h4>
-                  <p>Tamilnadu Telugu People Foundation further intends to bring a lasting change in their lives by way of providing support, counseling, encouragement and a healthy environment.</p>
+                  <p>To realize its priorities, TNTPF holds events and programmes to bring all Telugu people under one roof to protect Telugu language and encourage Telugu medium in schools with the support of prominent personalities of Telugu origin.</p>
                 </div>
               </div>
               <div class="col-lg-4">
                 <div class="feature_item">
                   <i class="lnr lnr-diamond"></i>
                   <h4>Support</h4>
-                  <p> Tamilnadu Telugu People Foundation by its small effort would help them attain the right to survival, development and participation in the mainstream of the society. </p>
+                  <p>We invite Telugu people to join in the organization as volunteers to identify and list out the Telugu people, who are living in Tamil Nadu since many generations.
+</p>
                 </div>
               </div>
             </div>
@@ -183,28 +209,28 @@
         <!--================Testimonials Area =================-->
         <section class="event_area p_120" id="team">
           <div class="container">
+
             <div class="main_title" >
-              <h2> Teams</h2>
-              <p>Meet Tamilnadu Telugu People Foundation Team</p>
+              <h2> Service Activities</h2>
+              <p>TNTPF volunteers are taking part in various service activities and helping Telugu people who are in distress. A team of TNTPF is working round the clock to hear the woes of Telugu people across Tamil Nadu. We also request Telugu people who are interested to take up social, cultural and literary activities to come forward to take the Telugu pride to the next generations.</p>
+            </div>
+
+            <br>
+            <br>
+
+            <div class="main_title" >
+              <h2> Office Bearers</h2>
+              <p>Mr Devarakonda Raju is the founder chairman of TNTPF. He is a philanthropist and social activist. He took initiative to help Telugu people even during the Chennai floods and the lockdown clamped to contain Corona pandemic. We need to strengthen his hands by joining together and uphold Telugu’s pride.</p>
             </div>
 
             <div class="row feature_inner">
               <div class="col-lg-12">
                 <div class="feature_item-1">
                   <img class="mx-auto rounded-circle" src="img/event/tn-raju.jpg" alt=""><br><br>
-                  <h4>Devarakonda Raju MA</h4>
-                  <p class="text-muted">MANAGING TRUSTEE</p>
+                  <h4>Devarakonda Raju  <br>(Post Graduate Political Science )</h4>
+                  <!-- <p class="text-muted">MANAGING TRUSTEE</p> -->
                 </div>
               </div>
-
-              <!-- <div class="col-lg-6">
-                <div class="feature_item-1">
-                  <img class="mx-auto rounded-circle" src="img/event/tharasingh.jpg" alt=""><br><br>
-                  <h4>MR. G. PRAVEEN KUMAR</h4>
-                  <p class="text-muted">TRUSREE</p>
-                </div>
-              </div> -->
-
 
 
 
@@ -572,10 +598,16 @@
                   <td>Bank Address</td>
                   <td>HDFC BANK LTD NO-30, Cenotaph Road Teynampet, CHENNAI - 600018, Tamilnadu, India</td>
                 </tr>
-
-
               </tbody>
             </table>
+            <br>
+            <br>
+            <center>
+              <h1> Pay Online </h1>
+              <img src="img/master-card.png"><br><br>
+              <a class="main_btn" href="https://rzp.io/l/n3mHJ6U" target="_blank">Donate</a>
+            </center>
+
 
           </div>
         </section>
